objects/SBQQ__CustomAction__c.object
<CustomObject>
    <description>Custom action definition.</description>
    <fields>
        <fullName>SBQQ__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether this action is used.</description>
        <inlineHelpText>Check to make this action available for use.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sets action to be the default overriding action.</description>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__DisplayOrder__c</fullName>
        <description>The order in which this action display in the UI.</description>
        <inlineHelpText>The order in which this action display in the UI.</inlineHelpText>
        <label>Display Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Label__c</fullName>
        <description>Label displayed for this action in the UI.</description>
        <inlineHelpText>Label displayed for this action in the UI.</inlineHelpText>
        <label>Label</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add Products</fullName>
                </value>
                <value>
                    <fullName>Renew Subscriptions</fullName>
                </value>
                <value>
                    <fullName>Upgrade Assets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TargetObject__c</fullName>
        <description>Object targeted by this action.</description>
        <inlineHelpText>Object targeted by this action.</inlineHelpText>
        <label>Target Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                    <default>true</default>
                    <label>Product</label>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Custom Action</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>SBQQ__Active__c</columns>
        <columns>NAME</columns>
        <columns>SBQQ__DisplayOrder__c</columns>
        <columns>SBQQ__Label__c</columns>
        <columns>SBQQ__TargetObject__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>